// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`assign, assign again, unassign assign 1`] = `
{
  "data": {
    "assign": {
      "__typename": "AssignmentPayload",
      "assignedTo": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [
            {
              "__typename": "AssigneeEdge",
              "node": {
                "__typename": "Assignee",
                "assignedTo": {
                  "__typename": "Worker",
                  "displayName": "Will Ruggiano",
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`assign, assign again, unassign unassign 1`] = `
{
  "data": {
    "unassign": {
      "__typename": "UnassignmentPayload",
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [],
        },
      },
      "unassignedFrom": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
    },
  },
}
`;
